# greentic-integration

./: .gitignore  Cargo.toml  Makefile  README.md
.codex/: STATE.json  repo_overview.md
.data/: sessions.json
.github/workflows/: e2e.yml  integration.yml
ci/: local_check.sh
compose/: stack.yml
compose/ingress/: default.conf
configs/: demo_local.yaml
crates/app/: Cargo.toml
crates/app/.data/: sessions.json
crates/app/src/: deployment.rs  fixtures.rs  lib.rs  main.rs  path_safety.rs  scenario.rs  session.rs
crates/app/src/harness/: config_layers.rs  mod.rs  pack.rs  services.rs
crates/app/tests/: e2e_config_precedence.rs  e2e_greentic_dev_multi_pack.rs  e2e_greentic_dev_negative.rs  e2e_greentic_dev_offline.rs  e2e_greentic_dev_snapshot.rs  e2e_infra.rs  e2e_messaging_provider.rs  e2e_multi_tenant_isolation.rs  e2e_pack_lifecycle.rs  e2e_regression.rs  e2e_retry_backoff.rs  e2e_scenario_smoke.rs  e2e_smoke.rs  e2e_stack_boot.rs  fixtures_normalize.rs  flows_chat_driven.rs  flows_events_to_message.rs  pr13_greentic_dev_e2e.rs  sample_payloads.rs
crates/app/tests/snapshots/: e2e_greentic_dev_snapshot__snap_flow_main.snap  e2e_greentic_dev_snapshot__snap_pack_yaml.snap
crates/deploy-plan-component/: Cargo.toml
crates/deploy-plan-component/src/: lib.rs
crates/deploy-plan-component/tests/: component_bindings.rs
docs/: ADDING_A_PROVIDER_SIM.md  ADDING_A_SCENARIO.md  APP_DESIGN.md  PINNING.md  PR-INT-ROADMAP.md  README.md  chat_driven_repo_assistant.md  events_to_message_example.md  payload_samples.md
fixtures/config/precedence/: project.toml  user.toml
fixtures/expected/: normalize_input.json
fixtures/inputs/: build_status_event.json  channel_message.json  rebuild_request_event.json
flows/chat_driven/: repo_assistant.ygtc
flows/events_to_message/: build_status_notifications.ygtc
harness/providers-sim/: Cargo.toml  README.md
harness/runner-smoke/: Cargo.toml  README.md  effect_log.schema.json
packs/: README.md
packs/adaptive-advanced/: README.md  pack.json
packs/adaptive-basic/: README.md  pack.json
packs/demo-menu/: README.md  pack.json
packs/deploy-generic/: README.md  pack.json
packs/integration-demos/: README.md  pack.json
packs/network-scenario-min/: README.md  pack.json
samples/payloads/: build_status_event.json  channel_message.json  rebuild_request_event.json
scripts/: build_deploy_component.sh  codex_next.py  dev_stub.sh  e2e.sh  fetch_greentic_binaries.sh  packs_test.py  pin_repo.sh  replay_build_status_payload.sh  replay_repo_assistant_payload.sh  run_build_status_demo.sh  run_repo_assistant_demo.sh  run_webchat_e2e.sh  update_golden.sh  webchat_contract.py
scripts/dev-check/: README.md  check.sh
tests/compose/: compose.e2e.yml
webchat-e2e/: package-lock.json  package.json  playwright.config.js
webchat-e2e/tests/: webchat.spec.js
(+35 files in other folders)
