[package]
name = "greentic-integration"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
camino = { version = "1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
directories = "6"
figment = { version = "0.10", features = ["toml", "env"] }
serde_with = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
notify = { version = "6" }
ureq = { version = "2.9", features = ["json"] }
once_cell = "1"

[dev-dependencies]
tempfile = "3"
tower = "0.5"
