[package]
name = "greentic-integration"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
camino.workspace = true
clap.workspace = true
directories.workspace = true
figment.workspace = true
serde_with.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_bw.workspace = true
semver.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
uuid.workspace = true
notify.workspace = true
ureq.workspace = true
once_cell.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
