[package]
name = "deploy-plan-component"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json.workspace = true
greentic-interfaces-guest = { workspace=true, default-features = false }

[dev-dependencies]
tempfile.workspace = true
